--- a/ballotPlanner/My Ballot Show/MyElections/MyElectionsTableViewCell.xib
+++ b/ballotPlanner/My Ballot Show/MyElections/MyElectionsTableViewCell.xib
@@ -37,7 +37,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="date" destination="baN-me-Ntv" id="YzU-5J-tFy"/>
+                <outlet property="date" destination="icO-5a-JHh" id="bVZ-zr-qk2"/>
                 <outlet property="name" destination="baN-me-Ntv" id="Lra-Gq-kAq"/>
             </connections>
             <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
