--- a/ballotPlanner/My Ballot Show/myBallot.storyboard
+++ b/ballotPlanner/My Ballot Show/myBallot.storyboard
@@ -111,6 +111,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="pKG-Wq-wYq" kind="show" identifier="toCandidateVC" id="zWx-5C-K0H"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -144,6 +147,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J8f-3b-fgQ" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="633" y="-119"/>
+        </scene>
+        <!--Candidate-->
+        <scene sceneID="BEg-Ck-XBg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Candidate" id="pKG-Wq-wYq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YvP-Gw-siP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1184" y="-119"/>
         </scene>
     </scenes>
 </document>
