Working on election shows

--- a/ballotPlanner/Base.lproj/Main.storyboard
+++ b/ballotPlanner/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="xfd-bX-dww" kind="relationship" relationship="rootViewController" id="N4a-AI-JBt"/>
+                        <segue destination="NOA-gB-l9a" kind="relationship" relationship="rootViewController" id="Aek-c8-EcO"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Wz-hK-jM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -34,6 +34,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fyO-oj-BQY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-811" y="-388"/>
+        </scene>
+        <!--ElectionDates-->
+        <scene sceneID="9m0-Q5-jhw">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ElectionDates" id="NOA-gB-l9a" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="yDf-gB-XhJ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DYn-ZB-wEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-757" y="-345"/>
         </scene>
     </scenes>
 </document>
