candidates index now works

--- a/ballotPlanner/Base.lproj/Main.storyboard
+++ b/ballotPlanner/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="NOA-gB-l9a" kind="relationship" relationship="rootViewController" id="Aek-c8-EcO"/>
+                        <segue destination="NOA-gB-l9a" kind="relationship" relationship="rootViewController" id="6BG-1H-h4A"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Wz-hK-jM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
