made collection for achievements

--- a/Achievements.storyboard
+++ b/Achievements.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aem-Ag-eNd" customClass="MyCollectionView">
-                                <rect key="frame" x="61" y="162" width="293" height="646"/>
+                                <rect key="frame" x="61" y="105" width="293" height="686"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ots-Tr-g4i">
@@ -60,6 +60,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="2oH-nW-TaC"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="aem-Ag-eNd" id="1de-fK-z4j"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7cq-Ne-qc3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
