--- a/ballotPlanner/Candidate Show/Candidate.storyboard
+++ b/ballotPlanner/Candidate Show/Candidate.storyboard
@@ -46,12 +46,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iu-Y2-yfg">
+                                <rect key="frame" x="140" y="503" width="113" height="70"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="AddToMyBallot"/>
+                                <connections>
+                                    <action selector="addToMyBallotButtonTappedWithSender:" destination="NAc-GA-mNk" eventType="touchUpInside" id="byC-VX-Lra"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="r8D-wF-wf0"/>
                     </view>
                     <connections>
                         <outlet property="about" destination="tG4-BH-6Yr" id="kgj-yq-sd1"/>
+                        <outlet property="addToMyBallot" destination="4iu-Y2-yfg" id="1Jx-I5-Pzd"/>
                         <outlet property="name" destination="Ybk-nQ-mcM" id="vA7-SQ-BGD"/>
                         <outlet property="party" destination="xU1-Ba-8dG" id="EnV-Ep-Ebu"/>
                         <outlet property="twitter" destination="THA-S8-hgg" id="z5m-qS-mgO"/>
